gr-sys/bindings/gr.rs

/* automatically generated by rust-bindgen 0.68.1 */

pub const GR_PROJECTION_DEFAULT: ::core::ffi::c_int = 0;
pub const GR_PROJECTION_ORTHOGRAPHIC: ::core::ffi::c_int = 1;
pub const GR_PROJECTION_PERSPECTIVE: ::core::ffi::c_int = 2;
pub const GR_VOLUME_WITHOUT_BORDER: ::core::ffi::c_int = 0;
pub const GR_VOLUME_WITH_BORDER: ::core::ffi::c_int = 1;
pub const GR_VOLUME_EMISSION: ::core::ffi::c_int = 0;
pub const GR_VOLUME_ABSORPTION: ::core::ffi::c_int = 1;
pub const GR_VOLUME_MIP: ::core::ffi::c_int = 2;
pub const GR_TEXT_USE_WC: ::core::ffi::c_int = 1;
pub const GR_TEXT_ENABLE_INLINE_MATH: ::core::ffi::c_int = 2;
pub const GR_2PASS_CLEANUP: ::core::ffi::c_int = 1;
pub const GR_2PASS_RENDER: ::core::ffi::c_int = 2;
pub const GR_MAX_CONTEXT: ::core::ffi::c_int = 8192;
pub const GR_DEFAULT_MATH_FONT: ::core::ffi::c_int = 232;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vertex_t {
    pub x: f64,
    pub y: f64,
}
#[doc = " Three-dimensional coordinate"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct point3d_t {
    pub x: f64,
    pub y: f64,
    pub z: f64,
}
#[doc = " Data point for `gr_volume_nogrid`"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct data_point3d_t {
    #[doc = "< Coordinates of data point"]
    pub pt: point3d_t,
    #[doc = "< Intensity of data point"]
    pub data: f64,
}
#[doc = " Provides optional extra data for `gr_volume_interp_gauss`"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct gauss_t {
    #[doc = "< Square root of determinant of covariance matrix"]
    pub sqrt_det: f64,
    #[doc = "< \\f$\\Sigma^{-\\frac{1}{2}}\\f$ encoded as three column vectors"]
    pub gauss_sig_1: point3d_t,
    #[doc = "< \\f$\\Sigma^{-\\frac{1}{2}}\\f$ encoded as three column vectors"]
    pub gauss_sig_2: point3d_t,
    #[doc = "< \\f$\\Sigma^{-\\frac{1}{2}}\\f$ encoded as three column vectors"]
    pub gauss_sig_3: point3d_t,
}
#[doc = " Provides optional extra data for `gr_volume_interp_tri_linear`"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tri_linear_t {
    #[doc = "< Reciproke of interpolation kernel extent in x-direction"]
    pub grid_x_re: f64,
    #[doc = "< Reciproke of interpolation kernel extent in y-direction"]
    pub grid_y_re: f64,
    #[doc = "< Reciproke of interpolation kernel extent in z-direction"]
    pub grid_z_re: f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cpubasedvolume_2pass_priv {
    _unused: [u8; 0],
}
pub type cpubasedvolume_2pass_priv_t = cpubasedvolume_2pass_priv;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cpubasedvolume_2pass_t {
    pub dmin: f64,
    pub dmax: f64,
    pub action: ::core::ffi::c_int,
    pub priv_: *mut cpubasedvolume_2pass_priv_t,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hexbin_2pass_priv {
    _unused: [u8; 0],
}
pub type hexbin_2pass_priv_t = hexbin_2pass_priv;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hexbin_2pass_t {
    pub nc: ::core::ffi::c_int,
    pub cntmax: ::core::ffi::c_int,
    pub action: ::core::ffi::c_int,
    pub priv_: *mut hexbin_2pass_priv_t,
}
extern "C" {
    pub fn gr_initgr();
}
extern "C" {
    pub fn gr_debug() -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_opengks();
}
extern "C" {
    pub fn gr_closegks();
}
extern "C" {
    pub fn gr_inqdspsize(
        arg1: *mut f64,
        arg2: *mut f64,
        arg3: *mut ::core::ffi::c_int,
        arg4: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_openws(
        arg1: ::core::ffi::c_int,
        arg2: *mut ::core::ffi::c_char,
        arg3: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_closews(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_activatews(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_deactivatews(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_configurews();
}
extern "C" {
    pub fn gr_clearws();
}
extern "C" {
    pub fn gr_updatews();
}
extern "C" {
    pub fn gr_polyline(arg1: ::core::ffi::c_int, arg2: *mut f64, arg3: *mut f64);
}
extern "C" {
    pub fn gr_polymarker(arg1: ::core::ffi::c_int, arg2: *mut f64, arg3: *mut f64);
}
extern "C" {
    pub fn gr_text(arg1: f64, arg2: f64, arg3: *mut ::core::ffi::c_char);
}
extern "C" {
    pub fn gr_textx(arg1: f64, arg2: f64, arg3: *mut ::core::ffi::c_char, arg4: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqtext(
        arg1: f64,
        arg2: f64,
        arg3: *mut ::core::ffi::c_char,
        arg4: *mut f64,
        arg5: *mut f64,
    );
}
extern "C" {
    pub fn gr_inqtextx(
        arg1: f64,
        arg2: f64,
        arg3: *mut ::core::ffi::c_char,
        arg4: ::core::ffi::c_int,
        arg5: *mut f64,
        arg6: *mut f64,
    );
}
extern "C" {
    pub fn gr_fillarea(arg1: ::core::ffi::c_int, arg2: *mut f64, arg3: *mut f64);
}
extern "C" {
    pub fn gr_cellarray(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: ::core::ffi::c_int,
        arg8: ::core::ffi::c_int,
        arg9: ::core::ffi::c_int,
        arg10: ::core::ffi::c_int,
        arg11: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_nonuniformcellarray(
        arg1: *mut f64,
        arg2: *mut f64,
        arg3: ::core::ffi::c_int,
        arg4: ::core::ffi::c_int,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: ::core::ffi::c_int,
        arg8: ::core::ffi::c_int,
        arg9: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_polarcellarray(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: f64,
        arg6: f64,
        arg7: ::core::ffi::c_int,
        arg8: ::core::ffi::c_int,
        arg9: ::core::ffi::c_int,
        arg10: ::core::ffi::c_int,
        arg11: ::core::ffi::c_int,
        arg12: ::core::ffi::c_int,
        arg13: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_nonuniformpolarcellarray(
        arg1: f64,
        arg2: f64,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: ::core::ffi::c_int,
        arg8: ::core::ffi::c_int,
        arg9: ::core::ffi::c_int,
        arg10: ::core::ffi::c_int,
        arg11: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_gdp(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: ::core::ffi::c_int,
        arg5: ::core::ffi::c_int,
        arg6: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_spline(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: ::core::ffi::c_int,
        arg5: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_gridit(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut f64,
    );
}
extern "C" {
    pub fn gr_setlinetype(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqlinetype(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setlinewidth(arg1: f64);
}
extern "C" {
    pub fn gr_inqlinewidth(arg1: *mut f64);
}
extern "C" {
    pub fn gr_setlinecolorind(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqlinecolorind(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setmarkertype(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqmarkertype(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setmarkersize(arg1: f64);
}
extern "C" {
    pub fn gr_inqmarkersize(arg1: *mut f64);
}
extern "C" {
    pub fn gr_setmarkercolorind(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqmarkercolorind(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_settextfontprec(arg1: ::core::ffi::c_int, arg2: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setcharexpan(arg1: f64);
}
extern "C" {
    pub fn gr_setcharspace(arg1: f64);
}
extern "C" {
    pub fn gr_settextcolorind(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqtextcolorind(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setcharheight(arg1: f64);
}
extern "C" {
    pub fn gr_setwscharheight(chh: f64, height: f64);
}
extern "C" {
    pub fn gr_inqcharheight(arg1: *mut f64);
}
extern "C" {
    pub fn gr_setcharup(arg1: f64, arg2: f64);
}
extern "C" {
    pub fn gr_settextpath(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_settextalign(arg1: ::core::ffi::c_int, arg2: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setfillintstyle(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqfillintstyle(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setfillstyle(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqfillstyle(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setfillcolorind(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqfillcolorind(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setresizebehaviour(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqresizebehaviour(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setcolorrep(arg1: ::core::ffi::c_int, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_setwindow(arg1: f64, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_inqwindow(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64, arg4: *mut f64);
}
extern "C" {
    pub fn gr_setviewport(arg1: f64, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_inqviewport(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64, arg4: *mut f64);
}
extern "C" {
    pub fn gr_selntran(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setclip(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setwswindow(arg1: f64, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_setwsviewport(arg1: f64, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_createseg(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_copysegws(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_redrawsegws();
}
extern "C" {
    pub fn gr_setsegtran(
        arg1: ::core::ffi::c_int,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: f64,
        arg6: f64,
        arg7: f64,
        arg8: f64,
    );
}
extern "C" {
    pub fn gr_closeseg();
}
extern "C" {
    pub fn gr_samplelocator(arg1: *mut f64, arg2: *mut f64, arg3: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_emergencyclosegks();
}
extern "C" {
    pub fn gr_updategks();
}
extern "C" {
    pub fn gr_setspace(
        arg1: f64,
        arg2: f64,
        arg3: ::core::ffi::c_int,
        arg4: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_inqspace(
        arg1: *mut f64,
        arg2: *mut f64,
        arg3: *mut ::core::ffi::c_int,
        arg4: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_setscale(arg1: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_inqscale(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_textext(arg1: f64, arg2: f64, arg3: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_inqtextext(
        arg1: f64,
        arg2: f64,
        arg3: *mut ::core::ffi::c_char,
        arg4: *mut f64,
        arg5: *mut f64,
    );
}
extern "C" {
    pub fn gr_setscientificformat(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_axes(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: f64,
    );
}
